@@ -1754,26 +1754,18 @@ sub bulk_add
             # Valid title, all we need
             my $time = get_songlength($file);
             print "Got time $time\n" if $debug;
-            my $md5 = get_md5( catfile( $config{filepath}, $file ) );
-            my $db_title = $dbh->quote($title);
-            my $db_artist;
-            if ( ($artist) && ( $artist !~ /^\s*$/ ) )
-            {
-                $db_artist = $dbh->quote($artist);
-            }
-            else
-            {
-                $db_artist = "NULL";
-            }
+            my $md5 = get_md5($file);
+            $artist = "NULL" unless $artist;
             my $db_filename = move_file( $file, $title, $artist );
             print "Moved file to $db_filename\n" if $debug;
             my $moved_md5 =
               get_md5( catfile( $config{filepath}, $db_filename ) );
-            $sth->execute( $db_title, $db_artist, $db_cat, $db_filename, $time,
+            $sth->execute( $title, $artist, $db_cat, $db_filename, $time,
                 $bulkadd_publisher, $moved_md5 )
               or die "can't execute the query: $DBI::errstr\n";
             print "Executed sth\n" if $debug;
             $sth->finish;
+
             if ( $^O eq "MSWin32" )
             {
                 push( @accepted, basename( Win32::GetLongPathName($file) ) );
@@ -3989,12 +3981,16 @@ sub play_mp3
 
 sub get_md5
 {
+    print "Getting MD5sum\n" if $debug;
     my $filename = shift;
+    print "Checking MD5 for file $filename\n" if $debug;
     local $/ = undef;
-    open( my $fh, "<", $filename );
+    open( my $fh, "<", $filename ) or die "Couldn't open $filename";
     binmode($fh);
     my $bindata = <$fh>;
-    return md5_hex($bindata);
+    my $md5     = md5_hex($bindata);
+    print "Returning MD5 $md5\n" if $debug;
+    return $md5;
 }
 
 sub get_songlength
